# SDL_gfx

./: Android.mk  CMakeLists.txt  ChangeLog  README  SDL_framerate.c  SDL_framerate.h  SDL_gfx.sln  SDL_gfx.spec  SDL_gfx.vcproj  SDL_gfxBlitFunc.c  SDL_gfxBlitFunc.h  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SDL_imageFilter.c  SDL_imageFilter.h  SDL_rotozoom.c  SDL_rotozoom.h  configure  configure.in
Docs/: html.doxyfile
Docs/html/: _s_d_l__framerate_8h_source.html  _s_d_l__gfx_blit_func_8h_source.html  _s_d_l__gfx_primitives_8c.html  _s_d_l__gfx_primitives_8c_source.html  _s_d_l__gfx_primitives_8h.html  _s_d_l__gfx_primitives_8h_source.html  _s_d_l__image_filter_8h_source.html  _s_d_l__rotozoom_8c.html  _s_d_l__rotozoom_8c_source.html  _s_d_l__rotozoom_8h.html  _s_d_l__rotozoom_8h_source.html  annotated.html  classes.html  functions.html  functions_vars.html  globals.html  globals_0x68.html  globals_0x72.html  globals_0x74.html  globals_defs.html  globals_func.html  globals_func_0x72.html  globals_func_0x74.html  index.html
Other Builds/: SDL_gfx-SDL2.patch
Test/: LaplaceRelaxation.c  TestFonts.c  TestFonts.vcproj  TestGfxPrimitives.c  TestRotozoom.c  configure
Test/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cmake/modules/: FindSDL2.cmake
